--- a/work.Rmd
+++ b/work.Rmd
@@ -12,6 +12,11 @@ output:
 ---
 
 ```{r setup, include=FALSE}
+knit: (function(input_file, encoding) {
+  out_dir <- 'docs';
+  rmarkdown::render(input_file,
+ encoding=encoding,
+ output_file=file.path(dirname(input_file), out_dir, 'index.html'))})
 knitr::opts_chunk$set(echo = F, message = F, warning = F, fig.align = "center", global.par = TRUE)
 library(data.table)
 library(openxlsx)
