--- a/work.Rmd
+++ b/work.Rmd
@@ -2,24 +2,17 @@
 title: "COVID-19 and Mental Health"
 author: "Narek Karimyan"
 date: "7/20/2020"
-output:
-  pdf_document:
-    toc: true
-    number_sections: true
-    fig_caption: yes        
-    includes:  
-      in_header: Untitled.tex
+knit: (function(input_file, encoding) { out_dir <- 'docs'; rmarkdown::render(input_file,
+  encoding=encoding, output_file=file.path(dirname(input_file), out_dir, 'index.html'))})
 ---
 
 ```{r setup, include=FALSE}
-knit: (function(input_file, encoding) {
-  out_dir <- 'docs';
-  rmarkdown::render(input_file,
- encoding=encoding,
- output_file=file.path(dirname(input_file), out_dir, 'index.html'))})
 knitr::opts_chunk$set(echo = F, message = F, warning = F, fig.align = "center", global.par = TRUE)
 library(data.table)
+library(dplyr)
+library(ggplot2)
 library(openxlsx)
+library(tidyverse)
 library(RColorBrewer)
 ```
 
